Fix download progress visibility

--- a/src/auto-updater/toast-src/toast.css
+++ b/src/auto-updater/toast-src/toast.css
@@ -25,6 +25,7 @@ body {
 .process {
   display: none;
   position: fixed;
+  z-index: 9999;
   bottom: 0;
   left: 0;
   right: 0;
